--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@trickfilm400/cs141-ups-mangement-card",
   "version": "1.0.1",
   "description": "Node.JS API for CS141 Management Card for UPS Systems",
+  "module": "./dist/esm/index.js",
   "main": "./dist/index.js",
   "typings": "./types/index.d.ts",
   "files": [
@@ -9,7 +10,7 @@
     "types"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc -p tsconfig.esm.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node .",
     "dev": "ts-node-dev --respawn --no-deps --rs --cls ./src/index.ts"
