--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "keywords": [
     "template",
-    "typescript"
+    "typescript",
+    "cs141",
+    "ups",
+    "management-card",
+    "cs141-ups-mangement-card"
   ],
   "author": "Nico W. <info@ni-wa.de> (https://trickfilm400.de/)",
   "license": "MIT",
@@ -36,6 +40,6 @@
     "axios": "^1.4.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "access": "public"
   }
 }
